[package]
name = "game-comms-client"
version = "0.1.0"
authors = ["Tiaan Louw <tiaanl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
futures = "0.3.5"
game-comms-messages = { version = "0.1.0", path = "../messages" }
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.12"
